--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
-h1 {
-    color: red;
+.header {
+    padding: 2%;
+    height: 3%;
+    text-align: center;
+    background-color: #FF4B3E;
+}
+
+.button {
+    background-color: white;
+    color: black;
+    transition-duration: 0.5s;
+    padding: 1%;
+    padding-top: 0.2%;
+    padding-bottom: 0.2%;
+    margin: 0%;
+}
+
+.button:hover {
+    background-color: black;
+    color: white;
 }
