--- a/styles/general.css
+++ b/styles/general.css
@@ -1,17 +1,6 @@
-.button {
-    background-color: white;
-    color: black;
-    transition-duration: 0.5s;
-    margin: 0%;
-    padding: 0%;
-}
-
-.button:hover {
-    background-color: black;
-    color: white;
-}
-
 iframe {
     width: 100%;
     border: none;
+    margin-left: auto;
+    margin-right: auto;
 }
