--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,10 +1,55 @@
 body {
-    margin: 0%;
     padding: 0%;
+    height: auto;
+    width: 100%;
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+html {
+    padding: 0%;
+    width: fit-content;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+.button {
+    background-color: #99EBFF;
+    color: #002129;
+    border-style: none;
+    transition-duration: 0.2s;
+    margin: 3px;
+    padding: 0%;
+    height: fit-content;
+    width: fit-content;
+    border-radius: 10px;
+}
+
+.button:hover {
+    font-size: large;
+    color: white;
+}
+
+.button:hover~nav {
+    background-color: #001014;
 }
 
 nav {
-    background-color: #FF4B3E;
+    background-color: #99EBFF;
     width: 100%;
-    height: 100%;
+    height: auto;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #001014;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1%;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
