--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -18,25 +18,21 @@ html {
 
 
 .button {
-    background-color: #99EBFF;
+    background-color: #FBFBFF;
     color: #002129;
     border-style: none;
-    transition-duration: 0.2s;
+    transition-duration: 0.3s;
     margin: 3px;
-    padding: 0%;
     height: fit-content;
     width: fit-content;
     border-radius: 10px;
 }
 
 .button:hover {
-    font-size: large;
     color: white;
-}
-
-.button:hover~nav {
     background-color: #001014;
 }
+
 
 nav {
     background-color: #99EBFF;
