--- a/styles/general.css
+++ b/styles/general.css
@@ -4,3 +4,57 @@ iframe {
     margin-left: auto;
     margin-right: auto;
 }
+
+footer {
+    background-color: #666666;
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+    font-size: 14px;
+}
+
+
+.footer-left p,
+.footer-right p {
+    margin: 0;
+}
+
+.footer-center ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.footer-center ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+
+.footer-center ul li a:hover {
+    color: #f39c12;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+
+
+.footer-container {
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer-left,
+.footer-center,
+.footer-right {
+    margin-bottom: 10px;
+}
