--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,51 +1,25 @@
+html,
 body {
-    padding: 0%;
-    height: auto;
-    width: 100%;
     display: inline;
-    margin-left: auto;
-    margin-right: auto;
+    overflow: hidden;
+    font-family: "Roboto";
 }
-
-html {
-    padding: 0%;
-    width: fit-content;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 
 
 .button {
-    background-color: #FBFBFF;
+    background-color: #EDF2F9;
     color: #002129;
-    border-style: none;
     transition-duration: 0.3s;
-    margin: 3px;
-    height: fit-content;
-    width: fit-content;
     border-radius: 10px;
 }
 
 .button:hover {
     color: white;
-    background-color: #001014;
+    background-color: #000000;
 }
 
 
 nav {
-    background-color: #99EBFF;
-    width: 100%;
-    height: auto;
-    border-style: solid;
-    border-width: 3px;
-    border-color: #001014;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1%;
-    border-radius: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: #53799E;
+    padding: 5px;
 }
