--- a/styles/general.css
+++ b/styles/general.css
@@ -55,8 +55,8 @@ iframe {
 
 .box-epit {
 
-    width: 1430px;
-    height: 3000px;
+    width: 95%;
+    height: auto;
     padding: 20px;
     border: 5px solid #53799E;
     margin: 15px;
@@ -107,4 +107,47 @@ tr:hover {
 
 table {
     margin-top: 40px;
+}
+
+#popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+
+#popup img {
+    max-width: 90%;
+    max-height: 80%;
+}
+
+
+#close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: rgb(224, 224, 224);
+    border: none;
+    padding: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.cropped-img {
+    height: 200px;
+    width: auto;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+p {
+
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
