--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -10,6 +10,8 @@ body {
     color: #002129;
     transition-duration: 0.3s;
     border-radius: 10px;
+    font-family: Verdana, Tahoma, sans-serif;
+
 }
 
 .button:hover {
@@ -21,4 +23,5 @@ body {
 nav {
     background-color: #53799E;
     padding: 5px;
+
 }
