--- a/styles/general.css
+++ b/styles/general.css
@@ -273,3 +273,21 @@ table {
     flex-direction: column;
     align-items: center;
 }
+
+#faculty-img {
+
+    width: 30%;
+    height: auto;
+    padding: 1%;
+    margin: 1%;
+
+}
+
+#faculty-head {
+    color: #53799E;
+}
+
+#faculty-text {
+
+    display: flex;
+}
