Animation system for homepage
• Added progress bar on homepage for animations
• Made it hide the navbar and footer until animations are done
• Added some demure title animations
• Made it easy to interpolate between animation states with get_progress_segment function
• Changed navbar and footer styles to match the rest of the page

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 body {
@@ -15,7 +16,6 @@ body {
 
 footer {
     background-color: #53799E;
-    font-family: 'Roboto', sans-serif;
     color: #EDF2F9;
     padding: 20px 0;
     text-align: center;
@@ -23,6 +23,9 @@ footer {
     box-sizing: border-box;
 }
 
+a {
+    font-family: Verdana, Tahoma, sans-serif;
+}
 
 .footer-left p,
 .footer-right p {
