--- a/styles/general.css
+++ b/styles/general.css
@@ -5,6 +5,7 @@ body {
     flex-direction: column;
     margin: 0;
     font-family: Verdana, Tahoma, sans-serif;
+
 }
 
 iframe {
@@ -12,6 +13,8 @@ iframe {
     border: none;
     margin-left: auto;
     margin-right: auto;
+    transition-duration: 500ms;
+
 }
 
 .footer {
@@ -208,7 +211,6 @@ table {
     color: #EDF2F9;
     border-radius: 10px;
     padding: 1%;
-
 }
 
 #lessons_background img {
@@ -264,4 +266,55 @@ table {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#home_background {
+    position: fixed;
+    background-color: #0485d6;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -2;
+    transition-duration: 1000ms;
+}
+
+#progress_bar {
+    background-color: #f6f3f4;
+    width: 100vw;
+    height: 1vh;
+    margin-bottom: 0;
+    bottom: 0;
+    margin-top: auto;
+}
+
+#title {
+    font-size: 700%;
+    text-shadow: 00px 0px 30px #010A14;
+    color: #f6f3f4;
+}
+
+#title_div {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+#title_icon {
+    border-radius: 20px;
+    border: solid #EDF2F9 5px;
+    box-shadow: 10px 10px 10px;
+    width: 50px;
+    height: 50px;
+    background-position: 50px 50px;
+    position: relative;
+    bottom: 75px;
+    left: 15px;
 }
