--- a/styles/general.css
+++ b/styles/general.css
@@ -367,16 +367,17 @@ table {
 
 }
 
-#faculty-img {
+#
+/*faculty-img {
     width: 30%;
     height: auto;
     padding: 1%;
     margin: 1%;
-}
+}*/
 
-#faculty-head {
+/*#faculty-head {
     color: #53799E;
-}
+}*/
 
 #faculty-text {
 
