Made intro cards square

--- a/styles/general.css
+++ b/styles/general.css
@@ -350,7 +350,7 @@ table {
     position: relative;
     color: #010A14;
     font-size: 1vw;
-    width: 10vw;
+    width: 20vh;
     height: 20vh;
     border-radius: 1vw;
     background-color: rgb(231, 231, 231);
