--- a/styles/general.css
+++ b/styles/general.css
@@ -463,3 +463,54 @@ button {
     border-radius: 1vw;
     padding: 1vw;
 }
+
+#home_popup {
+    width: 10vw;
+    height: 30vh;
+    border: solid 0vw black;
+    margin-left: auto;
+    margin-right: 1vw;
+    margin-top: auto;
+    margin-bottom: auto;
+    transition-duration: 500ms;
+    border-radius: 1vw;
+    background-color: rgb(231, 231, 231);
+    box-shadow: 1vw 1vw 1vw gray;
+    opacity: 0;
+    position: relative;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#home_popup:hover {
+    transition-duration: 200ms;
+    box-shadow: 1vw 1vw 1vw black;
+    height: 34vh;
+}
+
+#popup_button {
+    position: absolute;
+    /* Positions the button relative to #parent_div */
+    top: 1%;
+    /* Adjusts the distance from the top of #parent_div */
+    right: 1%;
+    /* Adjust*/
+    font-size: 1vw;
+    border: solid 0px black;
+    background-color: #007ac9;
+    color: white;
+    width: 2vw;
+    height: 2vw;
+    border-radius: 1vw;
+    box-shadow: -0.1vw 0.1vw 0.1vw gray;
+}
+
+#home_popup_contents {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1vw;
+}
