--- a/styles/general.css
+++ b/styles/general.css
@@ -58,10 +58,11 @@ h2.classes_styling {
 
     height: 2000vh;
     padding: 2vw;
-    border: 5vw solid #3c5873;
+    border: 0.5vw solid #3c5873;
     border-radius: 3vw;
     margin: 5vh;
     background-color: rgb(231, 231, 231);
+
 }
 
 .box-party {
@@ -391,7 +392,26 @@ table {
     transition-duration: 300ms;
 }
 
+.first-faculty-text {
+    display: inline-block;
+    margin-left: 15%;
+    margin-right: 15%;
+    font-size: 1.7vh;
+    border-radius: 2vh;
+    padding: 1vw;
+    border: 0.2vw dashed black;
+    box-shadow: 1vw 1vw 1vw gray;
+    transition-duration: 300ms;
+    margin-bottom: 1vw;
+    margin-top: 1vw;
+    background-image: url('../images/faculty/faculty-kids.png');
+
+}
+
+
+
 .faculty-text {
+    width: 20vw;
     display: inline-block;
     margin-left: 15%;
     margin-right: 15%;
@@ -512,4 +532,11 @@ button {
 #open-img2:hover,
 #open-img3:hover {
     transform: scale(1.1);
+}
+
+.first-letter-style {
+    font-size: 5vh;
+    color: #007ac9;
+    background-color: #007ac9;
+    text-decoration: none;
 }
