--- a/styles/general.css
+++ b/styles/general.css
@@ -383,6 +383,7 @@ table {
     transition-duration: 300ms;
     margin-bottom: 1vw;
     margin-top: 1vw;
+    position: relative;
 }
 
 .lesson-description-div:hover {
@@ -479,11 +480,8 @@ button {
 
 #popup_button {
     position: absolute;
-    /* Positions the button relative to #parent_div */
     top: 1%;
-    /* Adjusts the distance from the top of #parent_div */
     right: 1%;
-    /* Adjust*/
     font-size: 1vw;
     border: solid 0px black;
     background-color: #007ac9;
@@ -500,6 +498,7 @@ button {
     flex-direction: column;
     align-items: center;
     padding: 1vw;
+    font-size: 0.8vw;
 }
 
 #open-img1,
@@ -512,4 +511,100 @@ button {
 #open-img2:hover,
 #open-img3:hover {
     transform: scale(1.1);
+}
+
+#quiz_icon {
+    position: absolute;
+    top: 1%;
+    right: 1%;
+    width: 3vw;
+    height: 3vw;
+}
+
+#nameInput {
+    width: 50%;
+    height: 4vh;
+    border-radius: 1vw;
+    margin: 0;
+    padding: 0.2vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    font-size: 1vw;
+}
+
+#submit_button {
+    border: solid 0px black;
+    background-color: #007ac9;
+    color: white;
+    width: 8vw;
+    height: 2vw;
+    padding: 0.2vw;
+    border-radius: 1vw;
+    box-shadow: -0.1vw 0.1vw 0.1vw gray;
+    font-size: 1vw;
+}
+
+#name-input-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+#answers {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.answer_div {
+    display: inline-block;
+    font-size: 1.7vh;
+    border-radius: 2vh;
+    padding: 1vw;
+    border: 0.2vw dashed black;
+    box-shadow: 1vw 1vw 1vw gray;
+    transition-duration: 300ms;
+    margin: 1vw;
+    position: relative;
+    opacity: 0;
+}
+
+.answer_div:hover {
+    border: 0.3vw black solid;
+    box-shadow: 1vw 1vw gray;
+    transition-duration: 300ms;
+}
+
+#answer_correctness_button {
+    display: flex;
+    font-size: 1.5vw;
+    border-radius: 2vh;
+    padding: 1vw;
+    border: 0.2vw dashed black;
+    box-shadow: 1vw 1vw 1vw gray;
+    transition-duration: 300ms;
+    margin: 1vw;
+    position: relative;
+    opacity: 0;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 10vw;
+    height: 10vw;
+    background-color: rgb(231, 231, 231);
+    pointer-events: none;
+    transition-duration: 0ms;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    text-align: center;
+
+}
+
+#answer_correctness_button:hover {
+    border: 0.3vw black solid;
+    box-shadow: 1vw 1vw gray;
+    transition-duration: 300ms;
 }
