--- a/styles/general.css
+++ b/styles/general.css
@@ -34,25 +34,6 @@ h2.classes_styling {
     color: #EDF2F9;
 }
 
-.banner {
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
-    position: relative;
-
-}
-
-.banner-images {
-    display: flex;
-    width: 200%;
-    animation: slide 6s infinite;
-}
-
-.banner-images img {
-    width: 50%;
-    height: 100%;
-    object-fit: cover;
-}
 
 .box-epit {
 
@@ -62,6 +43,11 @@ h2.classes_styling {
     border-radius: 3vw;
     margin: 5vh;
     background-color: rgb(231, 231, 231);
+    background-image: url('../images/sky.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
 
 }
 
@@ -628,6 +614,7 @@ button {
     box-shadow: 1vw 1vw gray;
     transition-duration: 300ms;
 }
+
 .first-letter-style {
     font-size: 5vh;
     color: #007ac9;
